--- a/index.html
+++ b/index.html
@@ -7,23 +7,13 @@
     <meta name="description" content="">
     <meta name="format-detection" content="telephone=no">
     <meta name="format-detection" content="email=no">
-    <link rel="stylesheet" type="text/css" href="//www.dpfile.com/app/app-threejs-demo/static/starsky.min.c87f058a06b07aa6251f1475db3ffcd8.css">
+    <link rel="stylesheet" type="text/css" href="./reset.css">
 </head>
 <body>
   <div id="stage"></div>
-  <script type="text/javascript">
-      var _hip = [
-          ['_autoPV', false]
-      ];
 
-
-
-      var store={
-          info:"Toasted by @cortex/wepp-module-toast"
-      };
-  </script>
-  <script type="text/javascript" src="//www.dpfile.com/app/app-threejs-demo/three.min.3298078bce82bdb1afadf5b1a280915e.js"></script>
-  <script type="text/javascript" src="//www.dpfile.com/app/app-threejs-demo/static/common.min.a6180f26995b2658e4b485b4552da316.js"></script><div class="overlay" style="top: 0px; left: 0px; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.6); z-index: 10000001; position: fixed; display: none;"></div>
-  <script type="text/javascript" src="//www.dpfile.com/app/app-threejs-demo/static/starsky.min.4238e5b969825980ccd47e7cf2ae6a76.js"></script><canvas width="1920" height="978" style="width: 1920px; height: 978px;"></canvas>
+  <script type="text/javascript" src="./three.min.js"></script>
+  <script type="text/javascript" src="./common.min.js"></script>
+  <script type="text/javascript" src="./starsky.js"></script>
 </body>
 </html>
