--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div id="stage"></div>
 
-  <script type="text/javascript" src="./three.min.js"></script>
+  <script type="text/javascript" src="./threejs.min.js"></script>
   <script type="text/javascript" src="./common.min.js"></script>
   <script type="text/javascript" src="./starsky.js"></script>
 </body>
